[gd_scene load_steps=4 format=2]

[ext_resource path="res://MusicManager.gd" type="Script" id=1]
[ext_resource path="res://Art/Musics/menu.ogg" type="AudioStream" id=2]
[ext_resource path="res://Art/Musics/main.ogg" type="AudioStream" id=3]

[node name="MusicPlayer" type="Node" index="0"]

script = ExtResource( 1 )
inGame = false

[node name="MenuPlayer" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="MainPlayer" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 3 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[connection signal="finished" from="MenuPlayer" to="." method="_on_MenuPlayer_finished"]

[connection signal="finished" from="MainPlayer" to="." method="_on_MainPlayer_finished"]


